syntax = "proto3";

package bib.v1;

option go_package = "bib/api/proto/bib/v1;bibv1";

import "google/protobuf/timestamp.proto";

// User represents a bib user with cryptographic identity.
message User {
  // Unique identifier derived from public key (SHA256 hash, first 20 bytes, hex-encoded)
  string id = 1;

  // Public key bytes (Ed25519 or RSA)
  bytes public_key = 2;

  // Key type: "ed25519" or "rsa"
  string key_type = 3;

  // SHA256 fingerprint of the public key (hex-encoded)
  string public_key_fingerprint = 4;

  // Human-readable display name
  string name = 5;

  // Optional contact email
  string email = 6;

  // Account status
  UserStatus status = 7;

  // Permission level
  UserRole role = 8;

  // Preferred locale for i18n
  string locale = 9;

  // When the user was created
  google.protobuf.Timestamp created_at = 10;

  // When the user was last modified
  google.protobuf.Timestamp updated_at = 11;

  // When the user last authenticated
  google.protobuf.Timestamp last_login_at = 12;

  // Additional user profile data
  map<string, string> metadata = 13;
}

// UserStatus represents the status of a user account.
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_PENDING = 2;
  USER_STATUS_SUSPENDED = 3;
  USER_STATUS_DELETED = 4;
}

// UserRole represents the role/permission level of a user.
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ADMIN = 1;
  USER_ROLE_USER = 2;
  USER_ROLE_READONLY = 3;
}

// Session represents an authenticated user session.
message Session {
  // Unique session identifier
  string id = 1;

  // User who owns this session
  string user_id = 2;

  // Session type
  SessionType type = 3;

  // Client's IP address
  string client_ip = 4;

  // Client's user agent or SSH client string
  string client_agent = 5;

  // Fingerprint of the key used to authenticate
  string public_key_fingerprint = 6;

  // Node the session is connected to
  string node_id = 7;

  // When the session started
  google.protobuf.Timestamp started_at = 8;

  // When the session ended (null if active)
  google.protobuf.Timestamp ended_at = 9;

  // When the session was last active
  google.protobuf.Timestamp last_activity_at = 10;

  // Additional session data
  map<string, string> metadata = 11;
}

// SessionType represents the type of session.
enum SessionType {
  SESSION_TYPE_UNSPECIFIED = 0;
  SESSION_TYPE_SSH = 1;
  SESSION_TYPE_GRPC = 2;
  SESSION_TYPE_API = 3;
}

// UserService provides user management operations.
service UserService {
  // GetUser retrieves a user by ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // GetUserByPublicKey retrieves a user by their public key.
  rpc GetUserByPublicKey(GetUserByPublicKeyRequest) returns (GetUserByPublicKeyResponse);

  // ListUsers retrieves users matching the filter.
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // CreateUser creates a new user (admin only).
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // UpdateUser updates an existing user.
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // DeleteUser soft-deletes a user (admin only).
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // SuspendUser suspends a user account (admin only).
  rpc SuspendUser(SuspendUserRequest) returns (SuspendUserResponse);

  // ActivateUser activates a pending or suspended user (admin only).
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);

  // SetUserRole changes a user's role (admin only).
  rpc SetUserRole(SetUserRoleRequest) returns (SetUserRoleResponse);

  // GetCurrentUser retrieves the currently authenticated user.
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);

  // UpdateCurrentUser updates the currently authenticated user's profile.
  rpc UpdateCurrentUser(UpdateCurrentUserRequest) returns (UpdateCurrentUserResponse);

  // ListSessions lists sessions for a user.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // EndSession ends a specific session.
  rpc EndSession(EndSessionRequest) returns (EndSessionResponse);

  // EndAllSessions ends all sessions for a user.
  rpc EndAllSessions(EndAllSessionsRequest) returns (EndAllSessionsResponse);
}

// GetUserRequest is the request for GetUser.
message GetUserRequest {
  string user_id = 1;
}

// GetUserResponse is the response for GetUser.
message GetUserResponse {
  User user = 1;
}

// GetUserByPublicKeyRequest is the request for GetUserByPublicKey.
message GetUserByPublicKeyRequest {
  bytes public_key = 1;
}

// GetUserByPublicKeyResponse is the response for GetUserByPublicKey.
message GetUserByPublicKeyResponse {
  User user = 1;
}

// ListUsersRequest is the request for ListUsers.
message ListUsersRequest {
  // Filter by status
  UserStatus status = 1;

  // Filter by role
  UserRole role = 2;

  // Text search on name/email
  string search = 3;

  // Maximum number of results
  int32 limit = 4;

  // Number of results to skip
  int32 offset = 5;

  // Field to order by
  string order_by = 6;

  // Reverse the order
  bool order_desc = 7;
}

// ListUsersResponse is the response for ListUsers.
message ListUsersResponse {
  repeated User users = 1;
  int64 total_count = 2;
}

// CreateUserRequest is the request for CreateUser.
message CreateUserRequest {
  // Public key bytes
  bytes public_key = 1;

  // Key type: "ed25519" or "rsa"
  string key_type = 2;

  // Display name
  string name = 3;

  // Optional email
  string email = 4;

  // Role (defaults to "user")
  UserRole role = 5;

  // Optional locale
  string locale = 6;

  // Additional metadata
  map<string, string> metadata = 7;
}

// CreateUserResponse is the response for CreateUser.
message CreateUserResponse {
  User user = 1;
}

// UpdateUserRequest is the request for UpdateUser.
message UpdateUserRequest {
  string user_id = 1;

  // Fields to update (only non-empty fields are updated)
  string name = 2;
  string email = 3;
  string locale = 4;
  map<string, string> metadata = 5;
}

// UpdateUserResponse is the response for UpdateUser.
message UpdateUserResponse {
  User user = 1;
}

// DeleteUserRequest is the request for DeleteUser.
message DeleteUserRequest {
  string user_id = 1;
}

// DeleteUserResponse is the response for DeleteUser.
message DeleteUserResponse {
  bool success = 1;
}

// SuspendUserRequest is the request for SuspendUser.
message SuspendUserRequest {
  string user_id = 1;
  string reason = 2;
}

// SuspendUserResponse is the response for SuspendUser.
message SuspendUserResponse {
  User user = 1;
}

// ActivateUserRequest is the request for ActivateUser.
message ActivateUserRequest {
  string user_id = 1;
}

// ActivateUserResponse is the response for ActivateUser.
message ActivateUserResponse {
  User user = 1;
}

// SetUserRoleRequest is the request for SetUserRole.
message SetUserRoleRequest {
  string user_id = 1;
  UserRole role = 2;
}

// SetUserRoleResponse is the response for SetUserRole.
message SetUserRoleResponse {
  User user = 1;
}

// GetCurrentUserRequest is the request for GetCurrentUser.
message GetCurrentUserRequest {}

// GetCurrentUserResponse is the response for GetCurrentUser.
message GetCurrentUserResponse {
  User user = 1;
}

// UpdateCurrentUserRequest is the request for UpdateCurrentUser.
message UpdateCurrentUserRequest {
  string name = 1;
  string email = 2;
  string locale = 3;
  map<string, string> metadata = 4;
}

// UpdateCurrentUserResponse is the response for UpdateCurrentUser.
message UpdateCurrentUserResponse {
  User user = 1;
}

// ListSessionsRequest is the request for ListSessions.
message ListSessionsRequest {
  // Filter by user (empty = current user, or specify for admin)
  string user_id = 1;

  // Filter by session type
  SessionType type = 2;

  // Filter for active sessions only
  bool active_only = 3;

  // Maximum number of results
  int32 limit = 4;

  // Number of results to skip
  int32 offset = 5;
}

// ListSessionsResponse is the response for ListSessions.
message ListSessionsResponse {
  repeated Session sessions = 1;
  int64 total_count = 2;
}

// EndSessionRequest is the request for EndSession.
message EndSessionRequest {
  string session_id = 1;
}

// EndSessionResponse is the response for EndSession.
message EndSessionResponse {
  bool success = 1;
}

// EndAllSessionsRequest is the request for EndAllSessions.
message EndAllSessionsRequest {
  // User ID (empty = current user)
  string user_id = 1;
}

// EndAllSessionsResponse is the response for EndAllSessions.
message EndAllSessionsResponse {
  int32 sessions_ended = 1;
}

